--- a/competence.html
+++ b/competence.html
@@ -40,17 +40,17 @@
         <div id="hardskill" class="div_transp div_b_color b_bleu fade-in">
           <h2 class="caps">Hard Skills</h2>
           <hr>
-          <div>
-            <p>temp</p>
+          <div id="div_hard" class="div_transp div_b_color b_bleu fade-in">
+            <img src="assets/mind/hardskill.png" alt="hardskill">
           </div>
 
         </div>
 
         <div id="softskill" class="div_transp div_b_color b_bleu fade-in">
-          <h2  class="caps">Soft Skills</h2>
+          <h2 class="caps">Soft Skills</h2>
           <hr>
-          <div>
-            <p>temp</p>
+          <div id="div_soft" class="div_transp div_b_color b_bleu fade-in">
+            <img src="assets/mind/softskill.png" alt="softkill">
           </div>
         </div>
 
