--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="css/contact.css" />
   <link rel="stylesheet" href="css/div.css" />
   <link rel="stylesheet" href="css/border.css" />
+  <link rel="stylesheet" href="css/transi.css" />
 
   <title>Contact</title>
 </head>
@@ -33,7 +34,7 @@
   </header>
 
   <main class="milieu">
-    <section id="contact">
+    <section id="contact" class="fade-up">
 
       <div id="forma_div" class="div_b_color b_rouge">
         <div id="forma_div_child" class="div_transp timeline">
