--- a/formation.html
+++ b/formation.html
@@ -13,6 +13,8 @@
   <link rel="stylesheet" href="css/div.css" />
   <link rel="stylesheet" href="css/border.css" />
   <link rel="stylesheet" href="css/formation.css" />
+  <link rel="stylesheet" href="css/transi.css" />
+
 
   <title>loisir</title>
 </head>
@@ -35,30 +37,35 @@
 
   <main class="milieu">
 
-    <section id="formation">
+    <section id="formation" class="fade-up">
 
       <div id="forma_div" class="div_b_color b_jaune">
         <div id="forma_div_child" class="div_transp timeline">
-    
+
+          <h2 class="jaune">Expérience</h2>
+
+          <div class="line_flex_center">
+            <div class="ball"></div>
+            <div class="line"></div>
+            <p class="formation caps">En cours - BUT Informatique - Université de Lille - 59650</p>
+            <img id="IUT" src="assets/formation logo/IUT.jpg" alt="IUT">
+          </div>
+
+          <div class="connector_row">
             <div class="line_flex_center">
-              <div class="ball"></div>
-              <div class="line"></div>
-              <p class="formation caps">BUT Informatique - Université de Lille 59650</p>
+              <div class="connector"></div>
             </div>
+          </div>
 
-            <div class="connector_row">
-              <div class="line_flex_center">
-                <div class="connector"></div>
-              </div>
-            </div>
+          <div class="line_flex_center">
+            <div class="ball"></div>
+            <div class="line"></div>
+            <p class="formation caps">2022 - Baccaleuréat Géneral - Lycée Beaupré - 59320</p>
+            <img id="beaupre" src="assets/formation logo/beaupre.png" alt="IUT">
 
-            <div class="line_flex_center">
-              <div class="ball"></div>
-              <div class="line"></div>
-              <p class="formation caps">Baccaleuréat Géneral - Lycée Beaupré 59320</p>
-            </div>
+          </div>
 
-      
+
         </div>
       </div>
 
