--- a/index.html
+++ b/index.html
@@ -1,62 +1,73 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <link rel="stylesheet" href="css/palette.css" />
-    <link rel="stylesheet" href="css/root.css" />
-    <link rel="stylesheet" href="css/header.css" />
-    <link rel="stylesheet" href="css/utils.css" />
-    <link rel="stylesheet" href="css/index.css" />
-    <link rel="stylesheet" href="css/div.css" />
-    <link rel="stylesheet" href="css/border.css" />
 
-    <title>Adam STIEVENARD - Portfolio</title>
-  </head>
-  <body>
-    <header class="div_b_color b_violet caps">
-      <div id="headernom" class="selected"><a href="#page-top">Adam STIEVENARD</a></div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  <link rel="stylesheet" href="css/palette.css" />
+  <link rel="stylesheet" href="css/root.css" />
+  <link rel="stylesheet" href="css/header.css" />
+  <link rel="stylesheet" href="css/utils.css" />
+  <link rel="stylesheet" href="css/index.css" />
+  <link rel="stylesheet" href="css/div.css" />
+  <link rel="stylesheet" href="css/border.css" />
+  <link rel="stylesheet" href="css/transi.css" />
 
-      <div id="headerlist">
-        <ul>
-          <li ><a href="assets/CV.pdf" download="" class="beige">CV</a></li>
-          <li id="sep">|</li>
-          <li ><a href="contact.html" class="rouge">contact</a></li>
-          <li ><a href="formation.html" class="jaune">formation</a></li>
-          <li ><a href="travail.html" class="vert">mon travail</a></li>
-          <li ><a href="competence.html" class="bleu">compétences</a></li>
-        </ul>
+  <title>Adam STIEVENARD - Portfolio</title>
+</head>
+
+<body>
+  <header class="div_b_color b_violet caps">
+    <div id="headernom" class="selected"><a href="#page-top">Adam STIEVENARD</a></div>
+
+    <div id="headerlist">
+      <ul>
+        <li><a href="assets/CV.pdf" download="" class="beige">CV</a></li>
+        <li id="sep">|</li>
+        <li><a href="contact.html" class="rouge">contact</a></li>
+        <li><a href="formation.html" class="jaune">formation</a></li>
+        <li><a href="travail.html" class="vert">mon travail</a></li>
+        <li><a href="competence.html" class="bleu">compétences</a></li>
+      </ul>
+    </div>
+  </header>
+
+  <main class="milieu">
+
+    <section id="contact" class="fade-in">
+
+      <div id="index_div" class="div_b_color b_violet">
+        <div id="contact_div_child" class="div_transp">
+
+          <h1 class="violet">Bienvenue sur Mon Portfolio</h1>
+
+          <p class="fade-up">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel a,
+            facere cupiditate omnis, itaque illum laboriosam dicta aut alias sunt
+            labore quisquam qui dolorem vitae? Cupiditate facere quas iusto
+            nesciunt. Deserunt deleniti soluta sed? Pariatur quisquam alias
+            repellendus sapiente non, sit ducimus, voluptatibus distinctio commodi
+            perspiciatis libero magnam laborum officiis accusamus possimus,
+            voluptatem autem illo quia cumque impedit. Eaque, provident.
+            Voluptatibus unde quae iusto nam, consectetur aperiam labore delectus
+            animi accusantium! Aperiam quasi at ex eaque, architecto repellat
+            doloremque, aliquam sapiente fuga suscipit consequuntur? Quis sunt
+            tempore impedit ut non! Dolorum delectus id, provident adipisci iste
+            ratione non nam officiis nulla ducimus ipsum officia mollitia voluptas
+            accusantium ipsa culpa qui dolores quae, corrupti eligendi excepturi
+            soluta amet voluptatibus laboriosam? Odio! Repellendus dignissimos
+            accusamus ut cupiditate, repellat nemo optio adipisci non, laboriosam
+            ducimus a. Excepturi ut tempore voluptatem delectus, veniam minus
+            ipsum commodi facilis nisi dicta. Beatae illum impedit ab similique.
+          </p>
+        </div>
+
       </div>
-    </header>
-
-    <main>
-      <div class="milieu">
-        <h1  class="caps">bienvenue sur mon portfolio</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel a,
-          facere cupiditate omnis, itaque illum laboriosam dicta aut alias sunt
-          labore quisquam qui dolorem vitae? Cupiditate facere quas iusto
-          nesciunt. Deserunt deleniti soluta sed? Pariatur quisquam alias
-          repellendus sapiente non, sit ducimus, voluptatibus distinctio commodi
-          perspiciatis libero magnam laborum officiis accusamus possimus,
-          voluptatem autem illo quia cumque impedit. Eaque, provident.
-          Voluptatibus unde quae iusto nam, consectetur aperiam labore delectus
-          animi accusantium! Aperiam quasi at ex eaque, architecto repellat
-          doloremque, aliquam sapiente fuga suscipit consequuntur? Quis sunt
-          tempore impedit ut non! Dolorum delectus id, provident adipisci iste
-          ratione non nam officiis nulla ducimus ipsum officia mollitia voluptas
-          accusantium ipsa culpa qui dolores quae, corrupti eligendi excepturi
-          soluta amet voluptatibus laboriosam? Odio! Repellendus dignissimos
-          accusamus ut cupiditate, repellat nemo optio adipisci non, laboriosam
-          ducimus a. Excepturi ut tempore voluptatem delectus, veniam minus
-          ipsum commodi facilis nisi dicta. Beatae illum impedit ab similique.
-        </p>
       </div>
-    </main>
 
-    <footer class="milieu">
-      <p>footer</p>
-    </footer>
+    </section>
+  </main>
 
-  </body>
+</body>
+
 </html>
