--- a/travail.html
+++ b/travail.html
@@ -36,15 +36,18 @@
   <main class="line_flex_around">
 
     <section id="scolaire">
-      <h2>Travail Scolaire</h2>
+      <h2 id="sco" class="fade-down">Travail Scolaire</h2>
 
       <div class="container">
         <div class="div_transp div_b_color b_vert hover_glow">
           <img src="assets/casino/menu.png" id="machine" class="image " alt="">
           <div class="info_box">
-            <p>date :</p>
-            <p>pg : </p>
-            <a href="" class="vert">gitlab</a>
+            <p>date : 02/09/2025 - 05/02/2025</p>
+            <p>
+              pg :
+
+            </p>
+            <a href="https://gitlab.univ-lille.fr/iut-info/p3.01/2025-2026/groupe-9" class="vert">gitlab</a>
             <br><br>
             <div class="lang">
               <p id="java">java</p>
@@ -55,9 +58,11 @@
         <div class="div_transp div_b_color b_vert hover_glow">
           <img src="assets/laby/menuJFX.png" id="laby" class="image" alt="">
           <div class="info_box">
-            <p>date :</p>
-            <p>pg : </p>
-            <a href="" class="vert">gitlab</a>
+            <p>date : 09/10/2025 - 21/11/2025</p>
+            <p>
+              pg :
+            </p>
+            <a href="https://gitlab.univ-lille.fr/sae302/2025/J4_SAE3.3" class="vert">gitlab</a>
             <br><br>
             <div class="lang">
               <p id="java">java</p>
@@ -73,13 +78,15 @@
     <div class="vl b_vert"></div>
 
     <section id="Perso">
-      <h2 class="fade-down">Travail Personnel</h2>
+      <h2 id="per" class="fade-down">Travail Personnel</h2>
       <div class="container">
         <div class="div_transp div_b_color b_vert hover_glow">
           <img src="assets/placeholder.png" class="image" alt="">
           <div class="info_box">
             <p id="date3">date : </p>
-            <p id="pg3">pg : </p>
+            <p id="pg3">
+              pg :
+            </p>
             <a href="" class="rouge">github</a>
             <br><br>
             <div class="lang">
@@ -90,7 +97,7 @@
         <div class="div_transp div_b_color b_vert hover_glow">
           <img id="img4" src="assets/laby/login.png" class="image" alt="">
           <div class="info_box">
-            <p>date :</p>
+            <p>date : En Cours</p>
             <p>pg : </p>
             <a href="" class="vert">github</a>
             <br><br>
