fix presque fini

--- a/travail.html
+++ b/travail.html
@@ -42,12 +42,13 @@
         <div class="div_transp div_b_color b_vert hover_glow">
           <img src="assets/casino/menu.png" id="machine" class="image " alt="">
           <div class="info_box">
-            <p>date : 02/09/2025 - 05/02/2025</p>
+            <p>02/09/2025 - 05/02/2025</p>
             <p>
-              pg :
+              Projet d'apprentissage des principes de l'agilité via la réalisation d'un jeu au sein du terminal, avec une équipe de 5 personnes inconnues.
+              Le projet à été réalisé sous forme d'enchainement de sprints de 2h lors desquels nous avons créé le Casino Golden Ace. 
 
             </p>
-            <a href="https://gitlab.univ-lille.fr/iut-info/p3.01/2025-2026/groupe-9" class="vert">gitlab</a>
+            <a href="https://github.com/potatovitch/groupe-9" class="vert">github</a>
             <br><br>
             <div class="lang">
               <p id="java">java</p>
@@ -58,11 +59,13 @@
         <div class="div_transp div_b_color b_vert hover_glow">
           <img src="assets/laby/menuJFX.png" id="laby" class="image" alt="">
           <div class="info_box">
-            <p>date : 09/10/2025 - 21/11/2025</p>
+            <p>09/10/2025 - 21/11/2025</p>
             <p>
-              pg :
+              Projet de création d'un jeu de labyrinthe en JavaFX dans le cadre d'un cours d'une SAE, en équipe de 5 personnes.
+              Le but était de créer un jeu complet avec plusieurs niveaux, différents modes de jeu et des Jalons à satisfaire dans les délais. 
+
             </p>
-            <a href="https://gitlab.univ-lille.fr/sae302/2025/J4_SAE3.3" class="vert">gitlab</a>
+            <a href="https://github.com/potatovitch/J4_SAE3.3" class="vert">github</a>
             <br><br>
             <div class="lang">
               <p id="java">java</p>
@@ -87,6 +90,8 @@
             <p id="pg3">
               pg :
             </p>
+            <br><br>
+            <br><br>
             <a href="" class="rouge">github</a>
             <br><br>
             <div class="lang">
@@ -95,11 +100,15 @@
           </div>
         </div>
         <div class="div_transp div_b_color b_vert hover_glow">
-          <img id="img4" src="assets/laby/login.png" class="image" alt="">
+          <img id="img4" src="assets/Screenshot_20260105_061018.png" class="image" alt="">
           <div class="info_box">
-            <p>date : En Cours</p>
-            <p>pg : </p>
-            <a href="" class="vert">github</a>
+            <p>En Cours</p>
+            <p>
+              Projet de création d'un outil de récupération de pages web non-repertorié.
+              L'idée de ce projet m'est venu après avoir vu une vidéo sur le site "horselaugh.com" qui m'a donné envie de découvrir d'autres sites non-répertoriés.
+              Pour l'instant je compte juste faire un CLI. 
+            </p>
+            <a href="https://github.com/potatovitch/web-fetcher/tree/main" class="vert">github</a>
             <br><br>
             <div class="lang">
               <p id="java">java</p>
