--- a/index.html
+++ b/index.html
@@ -39,26 +39,12 @@
       <div id="index_div" class="div_b_color b_violet">
         <div id="contact_div_child" class="div_transp">
 
-          <h1 class="violet">Bienvenue sur Mon Portfolio</h1>
+          <h1 class="violet fade-down">Bienvenue sur Mon Portfolio</h1>
 
           <p class="fade-up">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel a,
-            facere cupiditate omnis, itaque illum laboriosam dicta aut alias sunt
-            labore quisquam qui dolorem vitae? Cupiditate facere quas iusto
-            nesciunt. Deserunt deleniti soluta sed? Pariatur quisquam alias
-            repellendus sapiente non, sit ducimus, voluptatibus distinctio commodi
-            perspiciatis libero magnam laborum officiis accusamus possimus,
-            voluptatem autem illo quia cumque impedit. Eaque, provident.
-            Voluptatibus unde quae iusto nam, consectetur aperiam labore delectus
-            animi accusantium! Aperiam quasi at ex eaque, architecto repellat
-            doloremque, aliquam sapiente fuga suscipit consequuntur? Quis sunt
-            tempore impedit ut non! Dolorum delectus id, provident adipisci iste
-            ratione non nam officiis nulla ducimus ipsum officia mollitia voluptas
-            accusantium ipsa culpa qui dolores quae, corrupti eligendi excepturi
-            soluta amet voluptatibus laboriosam? Odio! Repellendus dignissimos
-            accusamus ut cupiditate, repellat nemo optio adipisci non, laboriosam
-            ducimus a. Excepturi ut tempore voluptatem delectus, veniam minus
-            ipsum commodi facilis nisi dicta. Beatae illum impedit ab similique.
+            Bonjour, je suis un étudiant en deuxième année de BUT Informatique à l'Université de Lille.
+            Sur ce site, vous pouvez découvrir mon parcours académique, mes compétences, ainsi que des projets sur lesquels j'ai travaillé, autant ceux dans le cadre de mes études, que ceux personnels.
+            j'ai choisis ce parcours d'étude car en vue de devenir développeur fullstack. Si mon profil vous intéresse, n'hésitez pas à me contacter !
           </p>
         </div>
 
