--- a/index.html
+++ b/index.html
@@ -43,13 +43,15 @@
 
           <p class="fade-up">
             Bonjour, je suis un étudiant en deuxième année de BUT Informatique à l'Université de Lille.
-            Sur ce site, vous pouvez découvrir mon parcours académique, mes compétences, ainsi que des projets sur lesquels j'ai travaillé, autant ceux dans le cadre de mes études, que ceux personnels.
-            j'ai choisis ce parcours d'étude car en vue de devenir développeur fullstack. Si mon profil vous intéresse, n'hésitez pas à me contacter !
+            Sur ce site, vous pouvez découvrir mon parcours académique, mes compétences, ainsi que des projets sur
+            lesquels j'ai travaillé, autant ceux dans le cadre de mes études, que ceux personnels.
+            j'ai choisis ce parcours d'étude car en vue de devenir développeur fullstack. Si mon profil vous intéresse,
+            n'hésitez pas à me contacter !
           </p>
         </div>
 
       </div>
-      </div>
+
 
     </section>
   </main>
