--- a/travail.html
+++ b/travail.html
@@ -36,13 +36,13 @@
   <main class="line_flex_around">
 
     <section id="scolaire">
-      <h2 id="sco" class="fade-down">Travail Scolaire</h2>
+      <h2 id="sco" class="fade-down">Projet Universitaire</h2>
 
       <div class="container">
         <div class="div_transp div_b_color b_vert hover_glow">
           <img src="assets/casino/menu.png" id="machine" class="image " alt="">
           <div class="info_box">
-            <p>02/09/2025 - 05/02/2025</p>
+            <p>02/09/2025 - 05/09/2025</p>
             <p>
               Projet d'apprentissage des principes de l'agilité via la réalisation d'un jeu au sein du terminal, avec une équipe de 5 personnes inconnues.
               Le projet à été réalisé sous forme d'enchainement de sprints de 2h lors desquels nous avons créé le Casino Golden Ace. 
@@ -81,7 +81,7 @@
     <div class="vl b_vert"></div>
 
     <section id="Perso">
-      <h2 id="per" class="fade-down">Travail Personnel</h2>
+      <h2 id="per" class="fade-down">Projet Personnel</h2>
       <div class="container">
         <div class="div_transp div_b_color b_vert hover_glow">
           <img src="assets/placeholder.png" class="image" alt="">
